[package]
name = "kyscrape"
version = "0.1.0"
authors = ["Adam Thompson <adam@serialphotog.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.5"
